--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yasmeen's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="bg1">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="spanx">Rana Yesmeen's</span> Portfolio!</h1>
+            <h3>New Web Developer</h3>
+            <p>I recently started my quest on learning Web Development. Though I am still a beginner with practically no
+                skills, I aim to change that very soon with the aid of Programming Hero. Hopefully I will reach my goal
+                of becoming a professional web developer very soon. </p>
+            <a class="gradient" href="https://www.linkedin.com/in/rana-yasmin-04b90b195/" target="blank">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/girl1.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
