--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
             <img src="images/girl1.png" alt="">
         </div>
     </section>
+    <section class="dream">
+        <div class="half-width">
+            <img src="images/girl2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Becoming A Web Developer</h2>
+            <p class="spacex">I have adequate knowledge of HTML and CSS to an extent that I can spread my knowledge with
+                others and
+                teach them. Now, I hope to make many websites and plunge into advanced topics. My journey of becoming a
+                professional web developer seems possible now.</p>
+            <a class="gradient" href="https://www.linkedin.com/in/rana-yasmin-04b90b195/" target="blank">DOWNLOAD
+                RESUME</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
