--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="bg1">
+    <section class="bg1 flexi">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="spanx">Rana Yesmeen's</span> Portfolio!</h1>
@@ -27,7 +27,7 @@
             <img src="images/girl1.png" alt="">
         </div>
     </section>
-    <section class="dream">
+    <section class="dream flexi">
         <div class="half-width">
             <img src="images/girl2.png" alt="">
         </div>
@@ -42,7 +42,35 @@
                 RESUME</a>
         </div>
     </section>
+    <section class="exp">
+        <h1>Experiences</h1>
+        <div class="flexi">
+            <div class="boxed warm-border">
+                <h1>Full Stack Web Developer</h1>
+                <h2 class="orangy">2021-Present | Pro Level Developer</h2>
+                <p>
+                    I have advanced knowledge in HTML, CSS and Javascript. I know everything required to make a
+                    prefessional
+                    website functional and efficient. Also, I can work with many frameworks. Furthermore, I have
+                    adequate
+                    knowledge of servers, security and deployment. If you want a professional website, I will not only
+                    reach
+                    your requirements, but present something better than your expectations.
+                </p>
+            </div>
+            <div class="boxed cool-border">
+                <h1>Baby Web Developer</h1>
+                <h2 class="orangy">2020-2021 | Programming Hero Learner</h2>
+                <p>Even though I did not get offered a job, I went for being a remote web developer. I made websites for
+                    other companies and they were satisfied. Learning with Programming Hero was definitely a worthwhile
+                    experience.</p>
+            </div>
+        </div>
+    </section>
 
 </body>
+<footer>
+    © Peter Parker 2021, a Programming Hero initiative.
+</footer>
 
 </html>
