--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h2 class="orangy">2020-2021 | Programming Hero Learner</h2>
                 <p>Even though I did not get offered a job, I went for being a remote web developer. I made websites for
                     other companies and they were satisfied. Learning with Programming Hero was definitely a worthwhile
-                    experience.</p>
+                    experience for me.</p>
             </div>
         </div>
     </section>
